kustomize-helios-demo/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helios-demo
  labels:
    app.kubernetes.io/name: helios-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: helios-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helios-demo
    spec:
      containers:
        - name: helios-demo
          image: docker.io/vfarcic/helios-demo:0.0.2
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
